# eyesight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.tx/: config
data/: CMakeLists.txt  eyesight.appdata.xml  eyesight.desktop  eyesight.desktop.in  eyesight_ar.desktop  eyesight_de.desktop  eyesight_el.desktop  eyesight_fr.desktop  eyesight_it.desktop  eyesight_ja_JP.desktop  eyesight_pt.desktop  eyesight_zh_CN.desktop  org.hawaii.EyeSight.enums.xml  org.hawaii.EyeSight.gschema.xml  org.hawaii.EyeSight.json  org.hawaii.EyeSight.settings  org.hawaii.eyesight.json
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  actiondata.cpp  actiondata.h  actionsmanager.cpp  actionsmanager.h  config.h.in  configdialog.cpp  configdialog.h  edittoolbar.cpp  edittoolbar.h  eggsdialog.cpp  eggsdialog.h  eyesight.desktop.in  eyesight.qrc  fileproperties.cpp  fileproperties.h  fileutils.cpp  fileutils.h  gotodialog.cpp  gotodialog.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  oxygen.qrc  qiviewer.desktop  qiviewer.pro  settings.cpp  settings.h  shortcut.cpp  shortcut.h  toolbaredit.cpp  toolbaredit.h  webpdecoder.cpp  webpdecoder.h  zoomwidget.cpp  zoomwidget.h
src/forms/: aboutdialog.ui  configdialog.ui  edittoolbar.ui  eggsdialog.ui  fileproperties.ui  gotodialog.ui  toolbaredit.ui
src/icons/: .directory
src/icons/oxygen/: .directory  index.theme
src/qml/: BlurBackground.qml  Controls.qml  FoldersView.qml  ImageView.qml  MainWindow.qml  Options.qml  PicturesList.qml  Utils.js
src/translations/: ar.ts  de.ts  el.ts  es.ts  es_AR.ts  es_ES.ts  fr.ts  it.ts  ja_JP.ts  locale.pri  nl.ts  pt.ts  template.ts  zh_CN.ts
